--- a/hospitality/css/about.css
+++ b/hospitality/css/about.css
@@ -1,5 +1,23 @@
 /*== About US CSS ==*/
-
+.parallax-1 {
+	background: url('/img/bg/about.avif') no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	top: 0;
+	padding-top: 0%;
+	opacity: .8;
+  }
+  
+  .parallax-inner {
+	padding: 10% 20%;
+	z-index: 9;
+	color: rgb(0, 0, 0);
+	font-weight: bolder;
+	font-style: italic;
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  
 /*= Section 1 =*/
 
 .mySlides {
