--- a/hospitality/css/department.css
+++ b/hospitality/css/department.css
@@ -1,3 +1,23 @@
+.parallax-1 {
+	background: url('/img/bg/medical-cadre.jpg') no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	top: 0;
+	padding-top: 0%;
+	opacity: .8;
+  }
+  
+  .parallax-inner {
+	padding: 10% 20%;
+	z-index: 9;
+	color: rgb(0, 0, 0);
+	font-weight: bolder;
+	font-style: italic;
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+  
+
 /* department */
 .department-card {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
