--- a/hospitality/css/unique.css
+++ b/hospitality/css/unique.css
@@ -1,4 +1,23 @@
 /* =================== background img =================== */
+.parallax-1 {
+	background: url('/img/bg/hospital.webp') no-repeat;
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	top: 0;
+	padding-top: 0%;
+	opacity: .8;
+  }
+  
+  .parallax-inner {
+	padding: 10% 20%;
+	z-index: 9;
+	color: rgb(0, 0, 0);
+	font-weight: bolder;
+	font-style: italic;
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+
 /* Container for the entire section */
 .img-container {
     position: relative;
