--- a/hospitality/css/profile.css
+++ b/hospitality/css/profile.css
@@ -1,9 +1,7 @@
 #profileNav {
     position: relative;
     display: block; /* Ensure it is visible */
-    cursor: pointer;
-    padding-right: 8rem;
-    
+    cursor: pointer;   
 }
 
 .profile-logo {
@@ -13,6 +11,12 @@
     background-color: #ccc;
     background-size: cover;
     background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
 }
 
 #profileContainer {
@@ -70,7 +74,36 @@
 
 
 
+/* profile page  */
+.fade-in {
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+.fade-in.show {
+    opacity: 1;
+    transform: translateY(0);
+}
+.avatar-placeholder {
+    width: 150px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #007bff;
+    color: white;
+    font-size: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+#userAvatar {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+}
 
-
-
-
+#editForm {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Adds spacing between fields */
+}
