--- a/hospitality/css/profile.css
+++ b/hospitality/css/profile.css
@@ -75,12 +75,12 @@
 
 
 /* profile page  */
-.fade-in {
+.fade-in1 {
     opacity: 0;
     transform: translateY(-10px);
     transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
-.fade-in.show {
+.fade-in1.show {
     opacity: 1;
     transform: translateY(0);
 }
